k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validate-frontend
  namespace: garbo-stage
  labels:
    app: validate-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: validate-frontend
  template:
    metadata:
      labels:
        app: validate-frontend
    spec:
      containers:
        - name: validate-frontend
          image: ${REPOSITORY_NAME}:${TAG}
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
