k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validate-frontend
  namespace: garbo-stage
spec:
  selector:
    app: validate-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
